# zf-wasm-app

./: Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
src/: main.rs
