[package]
name = "zf-yew-webapp"
version = "0.1.0"
edition = "2021"
authors = ["Dylan-Matthew Garza <dylanmatthew.garza@gmail.com"]
repository="git@github.com:DMGDy/zf-webserver-app.git"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo = "0.8"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

